--- a/client/src/index.css
+++ b/client/src/index.css
@@ -231,34 +231,36 @@ section {
     position: sticky;
     top: 0;
     z-index: 1000;
-    padding: 18px 0;
+    padding: 16px 0;
 }
 
 .nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 50px;
+    padding: 0 20px;
 }
 
 .nav-container .logo {
     flex-shrink: 0;
     display: flex;
     align-items: center;
+    margin-right: 40px;
 }
 
 .nav {
-    flex: 1;
+    margin-left: auto;
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
 
 .nav-list {
     display: flex;
-    gap: 40px;
+    gap: 50px;
     list-style: none;
     margin: 0;
     padding: 0;
+    align-items: center;
 }
 
 .nav-list li {
